<resources>
    <string name="app_name">萌宠日记</string>
    <string name="petdiary">萌宠日记</string> 
    <string name="overview">统计</string>
    <string name="setting">设置</string>
    <string name="addrecord">添加记录</string>
    <string name="petprofile">萌宠档案</string>
    <string name="addfirstpet">请添加第一个宠物</string>
    <string name="addpet">添加爱宠</string>
    <string name="editpet">编辑资料</string>
    <string name="petname">宠物名字</string>
    <string name="time">时间</string>
    <string name="lovepet">爱宠</string>
    <string name="actiontype">活动</string>
    <string name="pleaseselect">请选择</string>
    <string name="remark">备注</string>
    <string name="save">保存</string>
    <string name="infofirstvisit">请输入主子资料</string>
    <string name="infoname">名字</string>
    <string name="infobirth">生日</string>
    <string name="infoweight">体重</string>
    <string name="infogender">性别</string>
    <string name="infogendermale">弟弟</string>
    <string name="infogenderfemale">妹妹</string>
    <string name="infospecies">星球</string>
    <string name="infospeciesdog">汪星</string>
    <string name="infospeciescat">喵星</string>
    <string name="infofinish">确认  >></string>
    <string name="infosave">保存</string>
    <string name="actionphoto">相册</string>
    <string name="actioncamera">摄像头</string>
    <string name="fead">喂食</string>
    <string name="photo_dialog_title">请选择</string>
    <string name="photo_dialog_message">请选择图片来源</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期天</string>
    <string name="day_before">天前</string>
    <string name="hour_before">小时前</string>
    <string name="mini_before">分前</string>
    <string name="rightnow">刚刚</string>
    <string name="nullstring">---</string>
    <string name="inputEmpty">请填写宠物信息</string>
    <string name="selected">选择</string>
    <string name="unselected">取消选择</string>
    <string name="pet_select_title">请选择爱宠</string>
    <string name="confirm">确定</string>
    <string name="doubletoexit">双击返回退出</string>
    <string name="pageloading">加载中</string>
    <string name="edit">编辑</string>
    <string name="del">删除</string>
    <string name="age_year">岁</string>
    <string name="age_month">个月</string>
    <string name="age_day">天</string>
    <string name="nextstep">下一步</string>
    <string name="feed">喂食</string>
    <string name="bath">洗澡</string>
    <string name="shovelshit">铲屎</string>
    <string name="walk">遛弯</string>
    <string name="fabu">发布</string>
</resources>
