<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/id_imgBtn"
        android:layout_width="103dp"
        android:layout_height="103dp"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="50dp"
        android:background="@color/app_background"
        android:src="@mipmap/imgbtn" />

    <RelativeLayout
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp">
        <TextView
            android:id="@+id/id_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoname"
            android:paddingTop="12dp"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/id_inputName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/id_name"
            android:maxLines="1"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp">
        <TextView
            android:id="@+id/id_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infobirth"
            android:paddingTop="12dp"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/id_inputBirth"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/id_birth"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <TextView
            android:id="@+id/id_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infoweight"
            android:paddingTop="12dp"
            android:textSize="16sp" />
        <EditText
            android:id="@+id/id_inputWeight"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/id_weight"
            android:hint="                             kg"
            android:inputType="number|numberDecimal"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <TextView
            android:id="@+id/id_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/infogender"
            android:paddingTop="5dp"
            android:textSize="16sp" />
        <RadioGroup
            android:id="@+id/id_inputGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/id_gender"
            android:checkedButton="@id/info_gendermale"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/info_gendermale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/infogendermale"
                android:textSize="16sp" />
            <RadioButton
                android:id="@+id/info_genderfemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/infogenderfemale"
                android:textSize="16sp" />
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="85dp">
        <TextView
            android:id="@+id/id_species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/infospecies"
            android:textSize="16sp" />
        <RadioGroup
            android:id="@+id/id_inputSpecies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/id_species"
            android:checkedButton="@id/info_speciescat"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/info_speciescat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/infospeciescat"
                android:textSize="16sp" />
            <RadioButton
                android:id="@+id/info_speciesdog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/infospeciesdog"
                android:textSize="16sp" />
        </RadioGroup>
    </RelativeLayout>

</LinearLayout>