<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:background="@color/app_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:background="@color/colorWhite"
        android:layout_marginTop ="3dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:clickable="false"
            android:maxWidth="21dp"
            android:maxHeight="21dp"
            android:minWidth="21dp"
            android:minHeight="21dp"
            android:layout_marginLeft ="23dp"
            android:layout_marginTop ="17dp"
            android:src="@mipmap/clock" />
        <TextView
            android:layout_marginLeft ="5dp"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            style="@style/diary_addfragment_text"
            android:gravity="center_vertical"
            android:text="@string/time"/>
        <LinearLayout
            android:layout_marginRight ="24dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="right"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/record_time_text"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                style="@style/diary_addfragment_text"
                android:textColor="#C1C0C0"
                android:gravity="center_vertical"
                android:text="@string/time"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:layout_marginTop="14dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:clickable="false"
            android:maxWidth="21dp"
            android:maxHeight="21dp"
            android:minWidth="21dp"
            android:minHeight="21dp"
            android:layout_marginLeft ="23dp"
            android:layout_marginTop ="17dp"
            android:src="@mipmap/pet" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            style="@style/diary_addfragment_text"
            android:gravity="center_vertical"
            android:layout_marginLeft ="5dp"
            android:text="@string/lovepet"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:id="@+id/pet_select"
            android:orientation="horizontal">
            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="1dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="right"
                android:layout_marginLeft ="170dp"
                android:id="@+id/pet_list_layout"
                android:orientation="horizontal">
                <ImageView
                    android:gravity="center"
                    android:layout_marginTop="11dp"
                    android:id="@+id/pet_photo_4"
                    android:background="#00000000"
                    android:clickable="false"
                    android:adjustViewBounds="true"
                    android:maxHeight="33dp"
                    android:maxWidth="33dp"
                    android:minHeight="33dp"
                    android:minWidth="33dp"
                    android:layout_marginLeft ="100dp"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:src="@mipmap/photo_normal" />
                <ImageView
                    android:layout_marginTop="11dp"
                    android:gravity="center"
                    android:id="@+id/pet_photo_3"
                    android:background="#00000000"
                    android:clickable="false"
                    android:adjustViewBounds="true"
                    android:maxHeight="33dp"
                    android:maxWidth="33dp"
                    android:minHeight="33dp"
                    android:minWidth="33dp"
                    android:layout_marginLeft ="90dp"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:src="@mipmap/photo_normal" />
                <ImageView
                    android:layout_marginTop="11dp"
                    android:gravity="center"
                    android:id="@+id/pet_photo_2"
                    android:background="#00000000"
                    android:clickable="false"
                    android:adjustViewBounds="true"
                    android:maxHeight="33dp"
                    android:maxWidth="33dp"
                    android:minHeight="33dp"
                    android:minWidth="33dp"
                    android:layout_marginLeft ="80dp"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:src="@mipmap/photo_normal" />

                <ImageView
                    android:layout_marginTop="11dp"
                    android:id="@+id/pet_photo_1"
                    android:layout_width="33dp"
                    android:layout_height="33dp"
                    android:adjustViewBounds="true"
                    android:background="#00000000"
                    android:clickable="false"
                    android:gravity="center"
                    android:maxWidth="33dp"
                    android:maxHeight="33dp"
                    android:minWidth="33dp"
                    android:minHeight="33dp"
                    android:layout_marginLeft ="70dp"
                    android:src="@mipmap/photo_normal" />
            </RelativeLayout>
            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_marginRight="24dp"
                android:layout_height="match_parent"
                android:layout_width="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="horizontal">
                    <ImageView
                        android:gravity="center"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:background="#00000000"
                        android:clickable="false"
                        android:src="@mipmap/rightarrow_btn" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:background="@color/colorWhite"
        android:layout_marginTop="14dp"
        android:layout_height="56dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:clickable="false"
            android:maxWidth="21dp"
            android:maxHeight="21dp"
            android:minWidth="21dp"
            android:minHeight="21dp"
            android:layout_marginLeft ="23dp"
            android:layout_marginTop ="17dp"
            android:src="@mipmap/checked" />
        <TextView
            android:layout_marginLeft ="5dp"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            style="@style/diary_addfragment_text"
            android:gravity="center_vertical"
            android:text="@string/actiontype"/>

        <LinearLayout
            android:layout_marginRight ="24dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="right|center_vertical"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/action_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:gravity="center" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_height="150dp"
        android:layout_width="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/remark_text_input"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:hint="@string/remark"
            android:gravity="top"
            android:scrollbars="vertical"
            android:inputType="textMultiLine"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="1dp"
        android:layout_marginTop="13dp"
        android:gravity="left"
        android:orientation="vertical">
            <ImageView
                android:layout_marginLeft="29dp"
                android:id="@+id/picture_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:background="#00000000"
                android:src="@mipmap/camera"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:gravity="center"
            android:id="@+id/entry_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/diary_addfragment_text"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_shape" 
            android:text="@string/fabu"/>
    </LinearLayout>
</LinearLayout>